# kaniko-rs

./: BUILDING.md  Cargo.toml  Dockerfile.build  Dockerfile.linux  Dockerfile.static  Makefile  README.md  build.sh  test.Dockerfile
.cargo/: config.toml
.github/workflows/: release-binaries.yaml
crates/dockerfile-parser/: Cargo.toml
crates/dockerfile-parser/src/: heredoc.rs  instruction.rs  lib.rs  parse.rs  parse.rs.backup
crates/kaniko-bench/: Cargo.toml
crates/kaniko-bench/benches/: dockerfile_parse.rs  layer_creation.rs  snapshot_walk.rs
crates/kaniko-cache/: Cargo.toml
crates/kaniko-cache/src/: layout.rs  lib.rs  push.rs  registry.rs  warm.rs
crates/kaniko-cli/: Cargo.toml
crates/kaniko-cli/src/: args.rs  main.rs
crates/kaniko-cli/tests/: integration.rs
crates/kaniko-core/: Cargo.toml
crates/kaniko-core/src/: buildcontext.rs  builder.rs  composite_key.rs  config.rs  container_runtime.rs  lib.rs  multistage_builder.rs  onbuild_parser.rs
crates/kaniko-core/src/command/: add.rs  arg.rs  base.rs  cache_command.rs  cmd.rs  copy.rs  entrypoint.rs  env.rs  expose.rs  healthcheck.rs  label.rs  mod.rs  mount.rs  onbuild.rs  run.rs  run_marker.rs  shell.rs  stopsignal.rs  user.rs  volume.rs  workdir.rs
crates/kaniko-creds/: Cargo.toml
crates/kaniko-creds/src/: helper.rs  keychain.rs  lib.rs
crates/kaniko-snapshot/: Cargo.toml
crates/kaniko-snapshot/src/: command_util.rs  container.rs  fs_util.rs  hasher.rs  ignore_list.rs  layered_map.rs  lib.rs  resolve.rs  snapshotter.rs  tar_util.rs  volumes.rs  walker.rs
crates/kaniko-util/: Cargo.toml
crates/kaniko-util/src/: constants.rs  error.rs  lib.rs  logging.rs  retry.rs  timing.rs
crates/oci-image/: Cargo.toml
crates/oci-image/src/: config.rs  digest.rs  extract.rs  index.rs  layer.rs  layout.rs  lib.rs  manifest.rs  mutate.rs  whiteout.rs
crates/oci-registry/: Cargo.toml
crates/oci-registry/src/: auth.rs  lib.rs  pull.rs  push.rs  reference.rs  transport.rs
release/: kaniko-cli-darwin-amd64-0.1.0
scripts/: release.sh
tests/integration/: dockerfile_build.rs  mod.rs
