[package]
name = "kaniko-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oci-image = { workspace = true }
oci-registry = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tar = { workspace = true }
chrono = "0.4"