[package]
name = "kaniko-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kaniko-core = { workspace = true }
kaniko-creds = { workspace = true }
kaniko-cache = { workspace = true }
kaniko-snapshot = { workspace = true }
kaniko-util = { path = "../kaniko-util" }
oci-image = { workspace = true }
oci-registry = { workspace = true }
dockerfile-parser = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tar = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"