[package]
name = "kaniko-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oci-image = { workspace = true }
oci-registry = { workspace = true }
dockerfile-parser = { workspace = true }
kaniko-snapshot = { workspace = true }
kaniko-cache = { workspace = true }
kaniko-creds = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
walkdir = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"