[package]
name = "kaniko-snapshot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oci-image = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
nix = { workspace = true }
once_cell = "1"
glob = "0.3"
chrono = "0.4"
filetime = "0.2"
reqwest = { workspace = true }
regex = "1"
url = "2"

[dev-dependencies]
tempfile = "3"