[package]
name = "oci-image"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = "3"