[package]
name = "oci-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
oci-image = { workspace = true }
kaniko-creds = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }